added an h1, footer with a link.

--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>World Clock</title>
   </head>
-  <body></body>
+  <body>
+    <h1>World Clock</h1>
+    <footer>
+      This project was coded by Samantha Volesky and is
+      <a href="#" target="_blank">open sourced on GitHub</a>.
+    </footer>
+  </body>
 </html>
