--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>World Clock</title>
   </head>
   <body>
@@ -11,5 +12,6 @@
       This project was coded by Samantha Volesky and is
       <a href="#" target="_blank">open sourced on GitHub</a>.
     </footer>
+    <script src="javascript/index.js"></script>
   </body>
 </html>
