--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <title>World Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+
+      <select>
+        <option value="">Select a city..</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Tokyo</option>
+      </select>
+      <div class="city">
+        <h2>Los Angeles 🇺🇸</h2>
+        <div class="date">September 25th 2023</div>
+        <div class="time">09:12:30 AM</div>
+      </div>
+      <div class="city">
+        <h2>Sydney 🇦🇺</h2>
+        <div class="date">September 25th 2023</div>
+        <div class="time">09:12:30 AM</div>
+      </div>
+    </div>
     <footer>
       This project was coded by Samantha Volesky and is
       <a href="https://github.com/sjvolesky/worldclock.git" target="_blank"
