styled project with css added a div to html

--- a/index.html
+++ b/index.html
@@ -17,18 +17,22 @@
         <option value="">Tokyo</option>
       </select>
       <div class="city">
-        <h2>Los Angeles 🇺🇸</h2>
-        <div class="date">September 25th 2023</div>
-        <div class="time">09:12:30 AM</div>
+        <div>
+          <h2>Los Angeles 🇺🇸</h2>
+          <div class="date">September 25th 2023</div>
+        </div>
+        <div class="time">09:12:30 <small>AM</small></div>
       </div>
       <div class="city">
-        <h2>Sydney 🇦🇺</h2>
-        <div class="date">September 25th 2023</div>
-        <div class="time">09:12:30 AM</div>
+        <div>
+          <h2>Paris 🇫🇷</h2>
+          <div class="date">September 25th 2023</div>
+        </div>
+        <div class="time">09:12:30 <small>AM</small></div>
       </div>
     </div>
     <footer>
-      This project was coded by Samantha Volesky and is
+      This project was coded by <strong>Samantha Volesky</strong> and is
       <a href="https://github.com/sjvolesky/worldclock.git" target="_blank"
         >open sourced on GitHub</a
       >.
