--- a/index.html
+++ b/index.html
@@ -12,32 +12,35 @@
     <div class="container">
       <h1>World Clock</h1>
 
-      <select>
+      <select id="city">
         <option value="">Select a city..</option>
-        <option value="">London</option>
-        <option value="">New York</option>
-        <option value="">Tokyo</option>
+        <option value="Europe/London">London</option>
+        <option value="America/New_York">New York</option>
+        <option value="Asia/Tokyo">Tokyo</option>
       </select>
-      <div class="city" id="los-angeles">
-        <div>
-          <h2>Los Angeles 🇺🇸</h2>
-          <div class="date"></div>
+
+      <div id="cities">
+        <div class="city" id="los-angeles">
+          <div>
+            <h2>Los Angeles 🇺🇸</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="paris">
-        <div>
-          <h2>Paris 🇫🇷</h2>
-          <div class="date"></div>
+        <div class="city" id="paris">
+          <div>
+            <h2>Paris 🇫🇷</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
       </div>
     </div>
     <footer>
       This project was coded by <strong>Samantha Volesky</strong> and is
       <a href="https://github.com/sjvolesky/worldclock.git" target="_blank"
         >open sourced on GitHub</a
-      >.
+      >
     </footer>
     <script src="javascript/index.js"></script>
   </body>
