--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
       <select id="city">
         <option value="">Select a city..</option>
+        <option value="current">Current Location</option>
         <option value="Europe/London">London</option>
         <option value="America/New_York">New York</option>
         <option value="Asia/Tokyo">Tokyo</option>
