--- a/index.html
+++ b/index.html
@@ -23,20 +23,28 @@
       <div id="cities">
         <div class="city" id="los-angeles">
           <div>
-            <h2>Los Angeles 🇺🇸</h2>
+            <h2>Los Angeles, CA 🇺🇸</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
+        <div class="city" id="sydney">
+          <div>
+            <h2>Sydney, Au 🇦🇺</h2>
             <div class="date"></div>
           </div>
           <div class="time"></div>
         </div>
         <div class="city" id="paris">
           <div>
-            <h2>Paris 🇫🇷</h2>
+            <h2>Paris, Fr 🇫🇷</h2>
             <div class="date"></div>
           </div>
           <div class="time"></div>
         </div>
       </div>
     </div>
+
     <footer>
       This project was coded by <strong>Samantha Volesky</strong> and is
       <a href="https://github.com/sjvolesky/worldclock.git" target="_blank"
